// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea exists 1`] = `
<div
  className="inputContainer"
>
  <Textarea
    aria-label="super"
    id="super"
    name="superhero"
    onChange={[Function]}
    required={true}
    rows={3}
    style={
      Object {
        "maxHeight": 300,
        "minHeight": 100,
        "resize": "auto",
      }
    }
    type="text"
    value="Batman"
  />
</div>
`;

exports[`Textarea should have a label when label is given 1`] = `
<div
  className="inputContainer"
>
  <FieldLabel
    className="tw-pb-1 tw-block"
    htmlFor="super"
  >
    Super Hero
  </FieldLabel>
  <Textarea
    id="super"
    name="superhero"
    onChange={[Function]}
    rows={3}
    style={
      Object {
        "maxHeight": 300,
        "minHeight": 100,
        "resize": "auto",
      }
    }
    type="text"
    value="Batman"
  />
</div>
`;

exports[`Textarea should have a required attribute when specified 1`] = `
<div
  className="inputContainer"
>
  <FieldLabel
    className="tw-pb-1 tw-block"
    htmlFor="super"
  >
    Super Hero
  </FieldLabel>
  <Textarea
    id="super"
    name="superhero"
    onChange={[Function]}
    rows={3}
    style={
      Object {
        "maxHeight": 300,
        "minHeight": 100,
        "resize": "auto",
      }
    }
    type="text"
    value="Batman"
  />
</div>
`;

exports[`Textarea should have helper text when helper text is given 1`] = `
<div
  className="inputContainer"
>
  <FieldLabel
    className="tw-pb-1 tw-block"
    htmlFor="super"
  >
    Super Hero
  </FieldLabel>
  <FieldHelper>
    Enter your favorite hero
  </FieldHelper>
  <Textarea
    id="super"
    name="superhero"
    onChange={[Function]}
    rows={3}
    style={
      Object {
        "maxHeight": 300,
        "minHeight": 100,
        "resize": "auto",
      }
    }
    type="text"
    value="Batman"
  />
</div>
`;

exports[`Textarea should set its value on input change 1`] = `
<div
  className="inputContainer"
>
  <Textarea
    aria-label="super"
    id="super"
    name="superhero"
    onChange={[Function]}
    required={true}
    rows={3}
    style={
      Object {
        "maxHeight": 300,
        "minHeight": 100,
        "resize": "auto",
      }
    }
    type="text"
    value="Batman"
  />
</div>
`;

exports[`Textarea should set its value on input change 2`] = `
<div
  className="inputContainer"
>
  <Textarea
    aria-label="super"
    id="super"
    name="superhero"
    onChange={[Function]}
    required={true}
    rows={3}
    style={
      Object {
        "maxHeight": 300,
        "minHeight": 100,
        "resize": "auto",
      }
    }
    type="text"
    value="New text value!"
  />
</div>
`;
